--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/unauthorizedNavbar.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/unauthorizedNavbar.html
@@ -18,7 +18,7 @@
           <a class="nav-link active" aria-current="page" href="#">Shipping & Delivery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Register</a>
+          <a class="nav-link active" aria-current="page" th:href="@{/registerPage}">Register</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" th:href="@{/loginPage}">Login</a>
