--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_brand.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_brand.html
@@ -21,8 +21,7 @@
                 </div>
                 <input type="hidden" th:name="${_csrf.parameterName}"
                        th:value="${_csrf.token}"/> <input type="hidden" name="id"
-                                                          th:value="*{id}"/> <input type="hidden" name="updating"
-                                                                                    th:value="${updatingBrand}"/>
+                                                          th:value="*{id}"/>
                 <div>
                     <label for="firstname">First Name</label> <input type="text"
                                                                      class="form-control" name="firstname"
@@ -32,8 +31,9 @@
                 <br/>
                 <div>
                     <label for="categories">Categories</label><br/> <select name="roles"
-                                                                       id="categories" th:field="*{categories}" multiple
-                                                                       class="form-control" style="height: 250px;">
+                                                                            id="categories" th:field="*{categories}"
+                                                                            multiple
+                                                                            class="form-control" style="height: 250px;">
                     <option th:each="category:${categories}" th:text="${category.name}"
                             th:value="${category.id}"></option>
                 </select>
