--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_category.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_category.html
@@ -22,8 +22,7 @@
                 </div>
                 <input type="hidden" th:name="${_csrf.parameterName}"
                        th:value="${_csrf.token}"/> <input type="hidden" name="id"
-                                                          th:value="*{id}"/> <input type="hidden" name="updating"
-                                                                                    th:value="${updatingCategory}"/>
+                                                          th:value="*{id}"/>
                 <div>
                     <label for="name">Name</label> <input type="text"
                                                           class="form-control" name="name"
