--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/view_product.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/view_product.html
@@ -10,14 +10,18 @@
         <div class="col-md-11 mx-auto mt-4 card card-body">
             <div class="row">
                 <div class="col-md-3 my-2">
-                    <img th:src="@{'/images/product/'+${product.image}}" alt="image image" class="img-fluid shadow-sm m-2" width="300"
+                    <img th:src="@{'/images/product/'+${product.image}}" alt="image image"
+                         class="img-fluid shadow-sm m-2" width="300"
                          height="280" id="main_image"/>
                     <div class="d-flex justify-content-between">
-                        <img th:src="@{'/images/product/'+${product.files[1]}}" alt="" class="img-fluid shadow-sm extra_image" width="80"
+                        <img th:src="@{'/images/product/'+${product.files[1]}}" alt=""
+                             class="img-fluid shadow-sm extra_image" width="80"
                              height="40"/>
-                        <img th:src="@{'/images/product/'+${product.files[2]}}" alt="" class="img-fluid shadow-sm extra_image" width="80"
+                        <img th:src="@{'/images/product/'+${product.files[2]}}" alt=""
+                             class="img-fluid shadow-sm extra_image" width="80"
                              height="40">
-                        <img th:src="@{'/images/product/'+${product.files[3]}}" alt="" class="img-fluid shadow-sm extra_image" width="80"
+                        <img th:src="@{'/images/product/'+${product.files[3]}}" alt=""
+                             class="img-fluid shadow-sm extra_image" width="80"
                              height="40"/>
                     </div>
                 </div>
@@ -28,9 +32,12 @@
                     <p th:text="${product.shortDescription}"></p>
                     <hr>
                     <div>
-                        <p class="m-0">TK. <span th:text="${product.price}"
-                                                 style="text-decoration:  line-through;"></span> <span
-                                th:text="${product.discountPrice}"></span></p>
+                        <p class="m-0">
+                            <span th:text="${currency}" th:if="${currencyPosition.equals('before')}" class="me-1"></span>
+                            <span th:text="${product.price}" style="text-decoration:  line-through;"></span>
+                            <span th:text="${product.discountPrice}"></span>
+                            <span th:text="${currency}" th:if="${currencyPosition.equals('after')}" class="ms-1"></span>
+                        </p>
                         <p class="m-0">
                             <span
                                     th:text="${product.quantity > 0 ? 'Available' : 'Out of Stock'}"
