Mail Server Setting

--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings.html
@@ -28,104 +28,7 @@
                             General
                         </button>
                     </h2>
-                    <div id="generalTab" class="accordion-collapse collapse show"
-                         data-bs-parent="#formAccordion">
-                        <form class="row" th:action="@{'/settings/save_general'}"
-                              method="post" enctype="multipart/form-data">
-                            <!--        General Tab Left Starts           -->
-                            <div class="col-md-6">
-                                <div>
-                                    <label for="siteName">Site Name</label>
-                                    <input type="text" name="SITE_NAME" th:value="${SITE_NAME}" id="siteName"
-                                           class="form-control" required/>
-                                </div>
-                                <br/>
-                                <div>
-                                    <label for="copyRight">Copyright</label>
-                                    <input type="text" name="COPYRIGHT" th:value="${COPYRIGHT}" id="copyRight"
-                                           class="form-control" required/>
-                                </div>
-                                <br/>
-                                <div>
-                                    <label for="THOUSAND_POINT_TYPE">Thousands Point Type</label>
-                                    <select name="THOUSAND_POINT_TYPE" id="THOUSAND_POINT_TYPE"
-                                            class="form-control">
-                                        <option value="POINT" th:selected="${THOUSAND_POINT_TYPE == 'POINT'}">Point(.)
-                                        </option>
-                                        <option value="COMMA" th:selected="${THOUSAND_POINT_TYPE == 'COMMA'}">Comma(,)
-                                        </option>
-                                    </select>
-                                </div>
-                                <br/>
-                                <div>
-                                    <label for="siteLogo">Logo</label>
-                                    <div class="d-flex">
-                                        <img th:src="@{|/images/logo/${SITE_LOGO}|}" alt="logo" class="img-fluid me-2"
-                                             width="90"
-                                             height="70"/>
-                                        <input type="file" name="SITE_LOGO" id="siteLogo"
-                                               class="form-control"/>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--        General Tab Left Ends           -->
-                            <!--        General Tab Right Starts           -->
-                            <div class="col-md-6">
-                                <div>
-                                    <label for="CURRENCY_ID">Currency</label>
-                                    <select name="CURRENCY_ID" id="CURRENCY_ID" class="form-control">
-                                        <option
-                                                th:each="c:${currencies}"
-                                                th:value="${c.id}"
-                                                th:text="${c.name}"
-                                                th:selected="${CURRENCY_ID == c.id+''}"
-                                        >
-                                        </option>
-                                    </select>
-                                </div>
-                                <br/>
-                                <div>
-                                    <label for="CURRENCY_SYMBOL_POSITION">Currency Symbol Position</label>
-                                    <select name="CURRENCY_SYMBOL_POSITION" id="CURRENCY_SYMBOL_POSITION"
-                                            class="form-control">
-                                        <option value="before" th:selected="${CURRENCY_POSITION == 'before'}">
-                                            Before
-                                        </option>
-                                        <option value="after" th:selected="${CURRENCY_POSITION == 'after'}">
-                                            After
-                                        </option>
-                                    </select>
-                                </div>
-                                <br/>
-                                <div>
-                                    <label for="DECIMAL_POINT_TYPE">Decimal Point Type</label>
-                                    <select name="DECIMAL_POINT_TYPE" id="DECIMAL_POINT_TYPE"
-                                            class="form-control">
-                                        <option value="POINT" th:selected="${DECIMAL_POINT_TYPE == 'POINT'}">Point(.)
-                                        </option>
-                                        <option value="COMMA" th:selected="${DECIMAL_POINT_TYPE == 'COMMA'}">Comma(,)
-                                        </option>
-                                    </select>
-                                </div>
-                                <br/>
-                                <div>
-                                    <label for="DECIMAL_DIGITS">Decimal Digits</label>
-                                    <select name="DECIMAL_DIGITS" id="DECIMAL_DIGITS"
-                                            class="form-control">
-                                        <option value="1" th:selected="${DECIMAL_DIGITS == '1'}">1</option>
-                                        <option value="2" th:selected="${DECIMAL_DIGITS == '2'}">2</option>
-                                        <option value="3" th:selected="${DECIMAL_DIGITS == '3'}">3</option>
-                                        <option value="4" th:selected="${DECIMAL_DIGITS == '4'}">4</option>
-                                    </select>
-                                </div>
-                                <br/>
-                            </div>
-                            <!--        General Tab Right Ends           -->
-                            <div class="mt-2">
-                                <button class="btn btn-primary" type="submit">Save</button>
-                                <button class="btn btn-danger" type="reset">Reset</button>
-                            </div>
-                        </form>
+                    <div th:replace="~{fragment/setting/generalSetting :: generalSetting(${currencies},${generalSetting})}">
                     </div>
                 </div>
                 <!--        General Tab Ends           -->
@@ -137,29 +40,7 @@
                             Countries
                         </button>
                     </h2>
-                    <div id="countriesTab" class="accordion-collapse collapse show"
-                         data-bs-parent="#formAccordion">
-                        <form th:action="@{/settings/save_country}" class="row p-2" method="post">
-                            <div class="col-12 d-flex">
-                                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-                                <input type="text" name="name" placeholder="Country Name"
-                                       class="form-control" required/>
-                                <input type="text" name="code" placeholder="Country Code"
-                                       class="form-control ms-1" required/>
-                                <button type="submit" class="btn btn-primary ms-1">Add</button>
-                            </div>
-                        </form>
-                        <div class="row p-2" style="height: 300px;overflow: auto">
-                            <ul class="list-group list-group-flush bg-light p-2">
-                                <li th:each="c:${countries}" class="d-flex justify-content-between list-group-item">
-                                    <div>
-                                        <span class="fs-5" th:text="${c.name}"></span> | <span th:text="${c.code}"
-                                                                                               class="text-muted"></span>
-                                    </div>
-                                    <a class="btn btn-danger ms-1" th:href="@{|/settings/delete_country/${c.name}|}">Delete</a>
-                                </li>
-                            </ul>
-                        </div>
+                    <div th:replace="~{fragment/setting/countrySetting :: countrySetting(${countries})}">
                     </div>
                 </div>
                 <!--        Countries Tab Ends           -->
@@ -171,33 +52,7 @@
                             States
                         </button>
                     </h2>
-                    <div id="statesTab" class="accordion-collapse collapse show"
-                         data-bs-parent="#formAccordion">
-                        <form th:action="@{/settings/save_state}" class="row p-2" method="post">
-                            <div class="col-12 d-flex">
-                                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-                                <input type="text" name="name" placeholder="State Name"
-                                       class="form-control" required/>
-                                <select class="form-control ms-1" name="country" required>
-                                    <option th:each="c:${countries}" th:value="${c.name}" th:text="${c.name}">
-                                    </option>
-                                </select>
-                                <button type="submit" class="btn btn-primary ms-1">Add</button>
-                            </div>
-                        </form>
-                        <div class="row p-2" style="height: 300px;overflow: auto">
-                            <ul class="list-group list-group-flush bg-light p-2">
-                                <li th:each="s:${states}" class="d-flex justify-content-between list-group-item">
-                                    <div>
-                                        <span class="fs-5" th:text="${s.name}"></span> | <span
-                                            th:text="${s.country}"
-                                            class="text-muted"></span>
-                                    </div>
-                                    <a class="btn btn-danger ms-1"
-                                       th:href="@{|/settings/delete_state/${s.id}|}">Delete</a>
-                                </li>
-                            </ul>
-                        </div>
+                    <div th:replace="~{fragment/setting/stateSetting :: stateSetting(${countries},${states})}">
                     </div>
                 </div>
                 <!--        States Tab Ends           -->
@@ -209,8 +64,7 @@
                             Mail Server
                         </button>
                     </h2>
-                    <div id="mailServerTab" class="accordion-collapse collapse show"
-                         data-bs-parent="#formAccordion">
+                    <div  th:replace="~{fragment/setting/mailServerSetting :: mailServerSetting(${mailServerSetting})}">
                     </div>
                 </div>
                 <!--        Mail Server Tab Ends           -->
