--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/head.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/head.html
@@ -4,8 +4,8 @@
 <link rel="icon" type="image/x-icon" th:href="@{/image/logo.webp}">
 <title>Shopme Admin</title>
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+<link rel="stylesheet" th:href="@{/css/toastui-editor.min.css}"/>
 <link rel="stylesheet" th:href="@{/css/style.css}"/>
 
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-<script th:src="@{/js/jquery-3.7.1.min.js}"></script>
 </head>
