--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/setting/mailTemplateSetting.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/setting/mailTemplateSetting.html
@@ -1,5 +1,5 @@
 <div class="tab-pane fade p-3" id="mailTemplateTabContent" role="tabpanel"
-     aria-labelledby="mailTemplateTab" th:fragment="mailTemplateSetting">
+     aria-labelledby="mailTemplateTab" th:fragment="mailTemplateSetting(mailTemplateSetting)">
 
     <ul class="nav nav-tabs" id="mailTemplateTabs" role="tablist">
         <li class="nav-item" role="presentation">
@@ -22,8 +22,26 @@
     <div class="tab-content" id="mailTemplateTab">
         <div class="tab-pane fade show active p-3" id="customerVerificationContent" role="tabpanel"
              aria-labelledby="customerVerification">
-            <h4>Content of First Tab</h4>
-            <div id="editor"></div>
+            <form th:action="@{/settings/save-mail-template}" id="customerVerificationForm" method="post">
+                <div>
+                    <label for="emailSubject">E-Mail Subject</label>
+                    <input type="text" name="CUSTOMER_VERIFIED_SUBJECT" id="emailSubject" class="form-control"
+                           th:value="${mailTemplateSetting['CUSTOMER_VERIFIED_SUBJECT']}"
+                    />
+                </div>
+                <br/>
+
+                <input type="hidden" name="CUSTOMER_VERIFIED_CONTENT" id="customerVerificationHiddenContent"
+                       class="form-control"
+                       th:value="${mailTemplateSetting['CUSTOMER_VERIFIED_CONTENT']}"
+                />
+                <div id="editor"></div>
+                <br/>
+                <div>
+                    <input type="submit" value="Save" class="btn btn-primary"/>
+                    <input type="reset" value="Reset" class="btn btn-danger"/>
+                </div>
+            </form>
         </div>
         <div class="tab-pane fade p-3" id="orderConfirmationTabContent" role="tabpanel"
              aria-labelledby="orderConfirmationTab">
