--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/registerPage.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/registerPage.html
@@ -4,10 +4,10 @@
 	lang="en">
 <head th:replace="~{fragment/head :: head}">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 	<nav th:replace="~{fragment/unauthorizedNavbar :: unauthorizedNavbar}"></nav>
 
-	<div class="container">
+	<div class="container flex-grow-1">
 		<div class="row">
 			<div class="col-md-10 card mx-auto mt-4 p-3">
 				<h3
